<resources>
    <string name="app_name">Furniture_APP</string>
    <string name="search_hint">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileTxt">Profile</string>
    <string name="personalDetailsTxt">Personal Details</string>
    <string name="ordersTxt">Orders</string>
    <string name="logoutTxt">Log Out</string>
    <string name="orderDetailTxt">Order Details</string>
    <string name="orderSummeryTxt">Order Summery</string>
    <string name="orderQuantityTxt">Quantity:</string>
    <string name="orderPriceTxt">Order</string>
    <string name="orderDeliveryTxt">Delivery</string>
    <string name="orderTotalTxt">Total</string>
    <string name="paymentMethodTxt">Payment Method</string>
    <string name="paymentMethodCheckBoxTxt">Cash On Delivery</string>
</resources>