<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profileTxt"
        android:textSize="24sp"
        android:textColor="#454545"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/personalDetailIcon"
            android:layout_width="24dp"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/person" />

        <TextView
            android:id="@+id/personalDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalDetailsTxt"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/orderIcon"
            android:layout_width="24dp"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/check_orders" />

        <TextView
            android:id="@+id/orderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordersTxt"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/logoutIcon"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_circle_right" />

        <TextView
            android:id="@+id/logoutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutTxt"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileDetailButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/personalDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_forward" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/orderDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_forward" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/logoutDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>